--- a/.github/workflows/ros2_tests.yml
+++ b/.github/workflows/ros2_tests.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   build:
 
-    runs-on: self-hosted
+    runs-on: wisevision-runner
 
     continue-on-error: true
 
@@ -30,12 +30,7 @@ jobs:
 
       uses: actions/checkout@v3
       with:
-        token: ${{ secrets.PAT_TOKEN }} 
         path: wisevision_action_executor_ws/src/wisevision_action_executor
-
-    - name: Configure Git for HTTPS authentication
-      run: |
-        git config --global url."https://${{ secrets.PAT_TOKEN }}@github.com/".insteadOf "https://github.com/"
 
     - name: Import repositories using vcs
       run: |
